--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
+    "@types/node": "20.6.2",
+    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
@@ -20,10 +20,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "zustand": "^4.4.1"
-  },
-  "devDependencies": {
-    "daisyui": "^3.7.3"
+    "typescript": "5.2.2"
   }
 }
